--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "c88ad191-120f-449d-8def-08d970ccd859"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
